[gd_scene load_steps=17 format=4 uid="uid://ciuv3aclo5o1o"]

[ext_resource type="PackedScene" uid="uid://bklhfrlus5ic6" path="res://src/scene/game/base/island_scene.tscn" id="1_gaehx"]
[ext_resource type="Script" uid="uid://d2jkl3guvc2eg" path="res://src/scene/game/scene_53.gd" id="2_4j60b"]
[ext_resource type="PackedScene" uid="uid://bictjaq7mapmy" path="res://src/scene/teleporter.tscn" id="2_b2c6w"]
[ext_resource type="PackedScene" uid="uid://bufvnslphsc63" path="res://src/unit/character/enemy/boss/peanut_butter/peanut_butter.tscn" id="3_o1p4x"]
[ext_resource type="PackedScene" uid="uid://dhp3xvkqaqrid" path="res://src/scene/entry_point.tscn" id="3_q6rlv"]
[ext_resource type="Texture2D" uid="uid://x26to2qfqgx1" path="res://asset/texture/prop/island/tent.webp" id="3_xotsn"]
[ext_resource type="PackedScene" uid="uid://cv52kslhuduw8" path="res://src/unit/character/enemy/boss/peanut_butter/spoon_bullet.tscn" id="4_6gfy6"]
[ext_resource type="Texture2D" uid="uid://1ueoyo6supr" path="res://asset/texture/prop/island/clothesline.webp" id="4_qdgwp"]
[ext_resource type="Texture2D" uid="uid://ccswpfjhsunot" path="res://asset/texture/prop/island/campfire.webp" id="4_xhvy6"]
[ext_resource type="PackedScene" uid="uid://g2mo24u82mxq" path="res://src/unit/character/npc/peanut_butter_npc.tscn" id="5_de8a0"]
[ext_resource type="Material" uid="uid://sx5qnlumeogp" path="res://src/asset/particle/smoke.tres" id="6_qdgwp"]

[sub_resource type="Gradient" id="Gradient_qdgwp"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_de8a0"]
gradient = SubResource("Gradient_qdgwp")
width = 8
height = 8
fill_to = Vector2(0, 1)
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_3xkjv"]
length = 0.001

[sub_resource type="Animation" id="Animation_micrt"]
resource_name = "spoon_fall"
step = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wtuyw"]
_data = {
&"RESET": SubResource("Animation_3xkjv"),
&"cap_fall": SubResource("Animation_micrt")
}

[node name="Scene53" instance=ExtResource("1_gaehx")]
script = ExtResource("2_4j60b")
custom_explore = true

[node name="Tile" parent="Background/Prop" index="0"]
tile_map_data = PackedByteArray("AAADAA0AAgAFAAYAAAADAAwAAgAKAAUAAAADAAsAAgAGAAUAAAADAAoAAgALAAYAAAADAAkAAgALAAYAAAADAAgAAgALAAYAAAADAAcAAgALAAQAAAACAA0AAgAJAAMAAAACAAwAAgAJAAIAAAACAAsAAgAJAAIAAAACAAoAAgAJAAYAAAACAAkAAgAJAAYAAAACAAgAAgAKAAEAAAACAAcAAgAKAAAAAAABAA0AAgAJAAcAAAABAAwAAgAJAAIAAAABAAsAAgAJAAIAAAABAAoAAgAKAAEAAAABAAkAAgAJAAIAAAABAAgAAgAKAAUAAAABAAcAAgAKAAAAAAAAAA0AAgAJAAcAAAAAAAwAAgAKAAEAAAAAAAsAAgAKAAUAAAAAAAoAAgAJAAYAAAAAAAkAAgAKAAEAAAAAAAgAAgAKAAUAAAAAAAcAAgAKAAQAAAD//w0AAgAJAAcAAAD//wwAAgAKAAUAAAD//wsAAgAKAAUAAAD//woAAgAKAAEAAAD//wkAAgAJAAIAAAD//wgAAgAKAAEAAAD//wcAAgAKAAQAAAAwAA0AAgAJAAcAAAAwAAwAAgAKAAEAAAAwAAsAAgAKAAEAAAAwAAoAAgAJAAIAAAAwAAkAAgAKAAEAAAAwAAgAAgAKAAUAAAAwAAcAAgAKAAQAAAAvAA0AAgAJAAMAAAAvAAwAAgAKAAEAAAAvAAsAAgAKAAUAAAAvAAoAAgAKAAEAAAAvAAkAAgAJAAIAAAAvAAgAAgAJAAYAAAAvAAcAAgAKAAAAAAAuAA0AAgAJAAMAAAAuAAwAAgAJAAIAAAAuAAsAAgAKAAEAAAAuAAoAAgAJAAYAAAAuAAkAAgAJAAIAAAAuAAgAAgAJAAYAAAAuAAcAAgAKAAQAAAAtAA0AAgAJAAcAAAAtAAwAAgAJAAIAAAAtAAsAAgAKAAUAAAAtAAoAAgAJAAIAAAAtAAkAAgAKAAUAAAAtAAgAAgAJAAYAAAAtAAcAAgAKAAAAAAAsAA0AAgAGAAIAAAAsAAwAAgAJAAYAAAAsAAsAAgAFAAEAAAAsAAoAAgAIAAEAAAAsAAkAAgAIAAEAAAAsAAgAAgAIAAEAAAAsAAcAAgAIAAAAAAAsABUAAgALAAcAAAAsABQAAgALAAYAAAAsABMAAgALAAYAAAArABUAAgAJAAcAAAArABQAAgAKAAEAAAArABMAAgAJAAYAAAAqABUAAgAJAAcAAAAqABQAAgAJAAIAAAAqABMAAgAJAAYAAAApABUAAgAJAAcAAAApABQAAgAKAAUAAAApABMAAgAJAAIAAAAoABUAAgAJAAcAAAAoABQAAgAKAAUAAAAoABMAAgAJAAIAAAAnABUAAgAJAAMAAAAnABQAAgAJAAYAAAAnABMAAgAJAAIAAAAmABUAAgAJAAMAAAAmABQAAgAKAAEAAAAmABMAAgAJAAIAAAAlABUAAgAJAAcAAAAlABQAAgAKAAEAAAAlABMAAgAKAAEAAAAkABUAAgAJAAcAAAAkABQAAgAJAAIAAAAkABMAAgAKAAEAAAAjABUAAgAJAAcAAAAjABQAAgAKAAEAAAAjABMAAgAJAAYAAAAiABUAAgAJAAMAAAAiABQAAgAJAAIAAAAiABMAAgAKAAUAAAAhABUAAgAJAAMAAAAhABQAAgAKAAEAAAAhABMAAgAKAAEAAAAgABUAAgAJAAcAAAAgABQAAgAKAAEAAAAgABMAAgAJAAIAAAAfABUAAgAJAAcAAAAfABQAAgAJAAIAAAAfABMAAgAKAAEAAAAeABUAAgAJAAMAAAAeABQAAgAJAAIAAAAeABMAAgAKAAEAAAAdABUAAgAJAAMAAAAdABQAAgAJAAIAAAAdABMAAgAKAAUAAAAcABUAAgAJAAMAAAAcABQAAgAKAAUAAAAcABMAAgAFAAUAAAAbABUAAgAJAAcAAAAbABQAAgAJAAIAAAAbABMAAgAKAAAAAAAaABUAAgAJAAcAAAAaABQAAgAKAAUAAAAaABMAAgAKAAQAAAAZABUAAgAJAAcAAAAZABQAAgAJAAIAAAAZABMAAgAKAAQAAAAYABUAAgAJAAcAAAAYABQAAgAJAAIAAAAYABMAAgAKAAQAAAAXABUAAgAJAAcAAAAXABQAAgAJAAIAAAAXABMAAgAKAAQAAAAWABUAAgAJAAcAAAAWABQAAgAKAAUAAAAWABMAAgAKAAQAAAAVABUAAgAJAAMAAAAVABQAAgAJAAYAAAAVABMAAgAKAAQAAAAUABUAAgAJAAcAAAAUABQAAgAJAAIAAAAUABMAAgAKAAAAAAATABUAAgAJAAcAAAATABQAAgAKAAUAAAATABMAAgAGAAEAAAASABUAAgAJAAcAAAASABQAAgAJAAIAAAASABMAAgAJAAIAAAARABUAAgAJAAMAAAARABQAAgAKAAUAAAARABMAAgAJAAYAAAAQABUAAgAJAAMAAAAQABQAAgAKAAUAAAAQABMAAgAJAAYAAAAPABUAAgAJAAMAAAAPABQAAgAKAAEAAAAPABMAAgAJAAIAAAAOABUAAgAJAAcAAAAOABQAAgAJAAIAAAAOABMAAgAJAAIAAAANABUAAgAJAAMAAAANABQAAgAKAAEAAAANABMAAgAKAAEAAAAMABUAAgAJAAcAAAAMABQAAgAKAAEAAAAMABMAAgAJAAYAAAALABUAAgAJAAcAAAALABQAAgAJAAIAAAALABMAAgAKAAUAAAAKABUAAgAJAAcAAAAKABQAAgAKAAEAAAAKABMAAgAKAAUAAAAJABUAAgAJAAcAAAAJABQAAgAKAAEAAAAJABMAAgAJAAIAAAAIABUAAgAJAAcAAAAIABQAAgAJAAYAAAAIABMAAgAKAAUAAAAHABUAAgAJAAMAAAAHABQAAgAKAAUAAAAHABMAAgAKAAUAAAAGABUAAgAJAAMAAAAGABQAAgAKAAEAAAAGABMAAgAKAAEAAAAFABUAAgAJAAMAAAAFABQAAgAJAAYAAAAFABMAAgAKAAEAAAAEABUAAgAJAAcAAAAEABQAAgAJAAYAAAAEABMAAgAKAAEAAAADABUAAgAIAAMAAAADABQAAgAIAAEAAAADABMAAgAIAAUAAAAFABIAAgAJAAIAAAAFABEAAgAKAAEAAAAFABAAAgAJAAYAAAAFAA8AAgAJAAYAAAAFAA4AAgAKAAUAAAAEABIAAgAJAAYAAAAEABEAAgAKAAEAAAAEABAAAgAJAAIAAAAEAA8AAgAKAAEAAAAEAA4AAgAKAAEAAAADABIAAgAIAAEAAAADABEAAgAIAAEAAAADABAAAgAIAAUAAAADAA8AAgAIAAEAAAADAA4AAgAIAAEAAAAFAA0AAgAJAAYAAAAEAA0AAgAJAAYAAAAPABIAAgAKAAEAAAAPABEAAgAGAAEAAAAOABIAAgAJAAIAAAAOABEAAgAKAAUAAAANABIAAgAKAAUAAAANABEAAgAKAAEAAAAMABIAAgAKAAUAAAAMABEAAgAKAAUAAAALABIAAgAKAAUAAAALABEAAgAKAAUAAAAKABIAAgAJAAIAAAAKABEAAgAJAAYAAAAJABIAAgAKAAUAAAAJABEAAgAKAAUAAAAIABIAAgAKAAEAAAAIABEAAgAJAAIAAAAHABIAAgAJAAIAAAAHABEAAgAJAAIAAAAGABIAAgAKAAUAAAAGABEAAgAJAAIAAAALABAAAgAJAAIAAAALAA8AAgAGAAEAAAAKABAAAgAKAAEAAAAKAA8AAgAKAAEAAAAJABAAAgAKAAEAAAAJAA8AAgAKAAEAAAAIABAAAgAKAAEAAAAIAA8AAgAJAAYAAAAHABAAAgAJAAIAAAAHAA8AAgAKAAEAAAAGABAAAgAJAAIAAAAGAA8AAgAKAAUAAAAHAA4AAgAJAAIAAAAHAA0AAgAGAAEAAAAGAA4AAgAJAAIAAAAGAA0AAgAJAAYAAAArABIAAgAKAAUAAAArABEAAgAKAAEAAAArABAAAgAJAAYAAAArAA8AAgAJAAIAAAArAA4AAgAJAAIAAAAqABIAAgAJAAIAAAAqABEAAgAKAAEAAAAqABAAAgAJAAYAAAAqAA8AAgAJAAIAAAAqAA4AAgAJAAIAAAAsABIAAgALAAIAAAAsABEAAgALAAIAAAAsABAAAgALAAYAAAAsAA8AAgALAAIAAAAsAA4AAgALAAYAAAApABIAAgAKAAUAAAApABEAAgAJAAIAAAApABAAAgAJAAYAAAApAA8AAgAJAAIAAAApAA4AAgAKAAEAAAAoABIAAgAKAAEAAAAoABEAAgAKAAUAAAAoABAAAgAKAAUAAAAoAA8AAgAJAAYAAAAoAA4AAgAJAAYAAAArAA0AAgAKAAUAAAAqAA0AAgAKAAUAAAApAA0AAgAKAAEAAAAoAA0AAgAFAAEAAAAnABIAAgAJAAYAAAAnABEAAgAKAAUAAAAnABAAAgAKAAEAAAAnAA8AAgAKAAUAAAAmABIAAgAKAAEAAAAmABEAAgAKAAEAAAAmABAAAgAJAAIAAAAmAA8AAgAJAAYAAAAlABIAAgAJAAIAAAAlABEAAgAJAAIAAAAlABAAAgAKAAEAAAAlAA8AAgAKAAEAAAAkABIAAgAJAAIAAAAkABEAAgAJAAYAAAAkABAAAgAJAAIAAAAkAA8AAgAFAAEAAAAjABIAAgAKAAUAAAAjABEAAgAKAAUAAAAiABIAAgAKAAUAAAAiABEAAgAJAAIAAAAhABIAAgAKAAUAAAAhABEAAgAKAAEAAAAgABIAAgAKAAEAAAAgABEAAgAFAAUAAAAHAAwAAgALAAYAAAAHAAsAAgALAAQAAAAGAAwAAgAJAAIAAAAGAAsAAgAKAAQAAAAFAAwAAgAJAAYAAAAFAAsAAgAKAAQAAAAEAAwAAgAKAAUAAAAEAAsAAgAKAAAAAAALAA4AAgALAAIAAAALAA0AAgALAAAAAAAKAA4AAgAKAAUAAAAKAA0AAgAKAAQAAAAJAA4AAgAKAAEAAAAJAA0AAgAKAAQAAAAIAA4AAgAKAAUAAAAIAA0AAgAKAAQAAAAPABAAAgALAAIAAAAPAA8AAgALAAQAAAAOABAAAgAJAAIAAAAOAA8AAgAKAAAAAAANABAAAgAKAAUAAAANAA8AAgAKAAQAAAAMABAAAgAKAAEAAAAMAA8AAgAKAAAAAAATABIAAgALAAYAAAATABEAAgALAAQAAAASABIAAgAJAAIAAAASABEAAgAKAAQAAAARABIAAgAJAAIAAAARABEAAgAKAAQAAAAQABIAAgAKAAEAAAAQABEAAgAKAAAAAAArAAwAAgAJAAIAAAArAAsAAgAKAAAAAAAqAAwAAgAKAAUAAAAqAAsAAgAKAAQAAAApAAwAAgAJAAYAAAApAAsAAgAKAAQAAAAoAAwAAgAIAAUAAAAoAAsAAgAIAAAAAAAnAA4AAgAKAAUAAAAnAA0AAgAKAAQAAAAmAA4AAgAJAAIAAAAmAA0AAgAKAAQAAAAlAA4AAgAKAAUAAAAlAA0AAgAKAAAAAAAkAA4AAgAIAAEAAAAkAA0AAgAIAAQAAAAjABAAAgAJAAYAAAAjAA8AAgAKAAAAAAAiABAAAgAJAAIAAAAiAA8AAgAKAAQAAAAhABAAAgAKAAUAAAAhAA8AAgAKAAQAAAAgABAAAgAIAAEAAAAgAA8AAgAIAAAAAAAfABIAAgAJAAIAAAAfABEAAgAKAAQAAAAeABIAAgAKAAUAAAAeABEAAgAKAAAAAAAdABIAAgAJAAYAAAAdABEAAgAKAAAAAAAcABIAAgAIAAUAAAAcABEAAgAIAAQAAAD+/w0AAgAIAAcAAAD+/wwAAgAIAAUAAAD+/wsAAgAIAAEAAAD+/woAAgAIAAEAAAD+/wkAAgAIAAEAAAD+/wgAAgAIAAUAAAD+/wcAAgAIAAAAAAAxAA0AAgALAAMAAAAxAAwAAgALAAYAAAAxAAsAAgALAAYAAAAxAAoAAgALAAIAAAAxAAkAAgALAAIAAAAxAAgAAgALAAYAAAAxAAcAAgALAAQAAAA=")

[node name="Tent" type="Sprite2D" parent="Background/Prop" index="1"]
position = Vector2(240, 148)
texture = ExtResource("3_xotsn")

[node name="Clothesline" type="Sprite2D" parent="Background/Prop" index="2"]
position = Vector2(312, 156)
texture = ExtResource("4_qdgwp")

[node name="Campfire" type="Sprite2D" parent="Background/Prop" index="3"]
position = Vector2(168, 160)
texture = ExtResource("4_xhvy6")

[node name="SmokeParticle" type="GPUParticles2D" parent="Background/Prop/Campfire" index="0"]
modulate = Color(0.0745098, 0.0745098, 0.0745098, 1)
position = Vector2(0, 2)
amount = 12
lifetime = 3.0
preprocess = 3.0
explosiveness = 0.1
process_material = ExtResource("6_qdgwp")

[node name="GameTile" parent="." index="1"]
tile_map_data = PackedByteArray("AAD+/w0ABQAFAAAAAAD//w0ABQAKAAAAAAD//w4ABQAKAAEAAAD//w8ABQAKAAUAAAD//xAABQAJAAYAAAD//xEABQAKAAUAAAD//xIABQAJAAIAAAD//xMABQAKAAEAAAD//xQABQAKAAUAAAD//xUABQAJAAIAAAD//xYABQAKAAUAAAD//xcABQAKAAUAAAD//xgABQAKAAEAAAD//xkABQAKAAUAAAD//xoABQAKAAEAAAD//xsABQAKAAEAAAAAAA0ABQAKAAAAAAAAAA4ABQAKAAEAAAAAAA8ABQAJAAYAAAAAABAABQAJAAIAAAAAABEABQAKAAEAAAAAABIABQAJAAIAAAAAABMABQAKAAEAAAAAABQABQAKAAEAAAAAABUABQAKAAEAAAAAABYABQAJAAIAAAAAABcABQAJAAYAAAAAABgABQAKAAEAAAAAABkABQAKAAEAAAAAABoABQAJAAIAAAAAABsABQAKAAEAAAABAA0ABQAKAAQAAAABAA4ABQAJAAYAAAABAA8ABQAJAAYAAAABABAABQAKAAUAAAABABEABQAJAAYAAAABABIABQAJAAIAAAABABMABQAJAAYAAAABABQABQAKAAUAAAABABUABQAKAAUAAAABABYABQAKAAEAAAABABcABQAJAAIAAAABABgABQAKAAEAAAABABkABQAKAAEAAAABABoABQAJAAIAAAABABsABQAKAAUAAAACAA0ABQAKAAAAAAACAA4ABQAKAAEAAAACAA8ABQAKAAEAAAACABAABQAJAAIAAAACABEABQAKAAUAAAACABIABQAKAAEAAAACABMABQAKAAEAAAACABQABQAJAAYAAAACABUABQAKAAEAAAACABYABQAJAAYAAAACABcABQAKAAUAAAACABgABQAKAAUAAAACABkABQAJAAYAAAACABoABQAJAAIAAAACABsABQAKAAEAAAADAA0ABQALAAAAAAADAA4ABQALAAIAAAADAA8ABQALAAIAAAADABAABQALAAYAAAADABEABQALAAIAAAADABIABQALAAIAAAADABMABQALAAIAAAADABQABQALAAIAAAADABUABQAGAAEAAAADABYABQAKAAUAAAADABcABQAJAAYAAAADABgABQAJAAIAAAADABkABQAKAAUAAAADABoABQAKAAEAAAADABsABQAKAAUAAAAEABcABQAJAAYAAAAEABgABQAJAAYAAAAEABkABQAKAAEAAAAEABoABQAJAAIAAAAEABsABQAKAAUAAAAFABcABQAKAAEAAAAFABgABQAKAAEAAAAFABkABQAKAAEAAAAFABoABQAKAAUAAAAFABsABQAKAAEAAAAGABcABQAKAAEAAAAGABgABQAKAAEAAAAGABkABQAJAAIAAAAGABoABQAJAAIAAAAGABsABQAKAAUAAAAHABcABQAJAAYAAAAHABgABQAJAAIAAAAHABkABQAKAAUAAAAHABoABQAJAAIAAAAHABsABQAKAAUAAAAIABcABQAJAAYAAAAIABgABQAJAAIAAAAIABkABQAKAAUAAAAIABoABQAJAAYAAAAIABsABQAJAAYAAAAJABcABQAKAAEAAAAJABgABQAJAAYAAAAJABkABQAJAAIAAAAJABoABQAJAAYAAAAJABsABQAKAAUAAAAKABcABQAKAAUAAAAKABgABQAJAAYAAAAKABkABQAJAAYAAAAKABoABQAKAAEAAAAKABsABQAJAAYAAAALABcABQAJAAYAAAALABgABQAJAAIAAAALABkABQAKAAEAAAALABoABQAKAAEAAAALABsABQAKAAUAAAAMABcABQAKAAEAAAAMABgABQAJAAYAAAAMABkABQAJAAIAAAAMABoABQAJAAYAAAAMABsABQAJAAIAAAANABcABQAJAAIAAAANABgABQAJAAIAAAANABkABQAKAAUAAAANABoABQAJAAYAAAANABsABQAJAAYAAAAOABcABQAKAAUAAAAOABgABQAJAAIAAAAOABkABQAKAAUAAAAOABoABQAJAAIAAAAOABsABQAKAAEAAAAPABcABQAKAAUAAAAPABgABQAKAAUAAAAPABkABQAKAAUAAAAPABoABQAKAAEAAAAPABsABQAKAAUAAAAQABcABQAJAAYAAAAQABgABQAKAAUAAAAQABkABQAKAAEAAAAQABoABQAJAAYAAAAQABsABQAJAAYAAAARABcABQAKAAUAAAARABgABQAJAAIAAAARABkABQAKAAUAAAARABoABQAJAAIAAAARABsABQAKAAUAAAASABcABQAKAAEAAAASABgABQAJAAIAAAASABkABQAJAAYAAAASABoABQAJAAIAAAASABsABQAKAAEAAAATABcABQAKAAEAAAATABgABQAKAAEAAAATABkABQAKAAUAAAATABoABQAJAAYAAAATABsABQAJAAIAAAAUABcABQAJAAIAAAAUABgABQAJAAIAAAAUABkABQAKAAEAAAAUABoABQAKAAEAAAAUABsABQAKAAUAAAAVABcABQAJAAYAAAAVABgABQAJAAYAAAAVABkABQAKAAEAAAAVABoABQAJAAIAAAAVABsABQAJAAYAAAAWABcABQAKAAUAAAAWABgABQAJAAYAAAAWABkABQAJAAIAAAAWABoABQAJAAYAAAAWABsABQAKAAEAAAAXABcABQAJAAYAAAAXABgABQAKAAUAAAAXABkABQAJAAYAAAAXABoABQAKAAEAAAAXABsABQAKAAEAAAAYABcABQAJAAYAAAAYABgABQAJAAIAAAAYABkABQAKAAUAAAAYABoABQAKAAEAAAAYABsABQAKAAUAAAAZABcABQAJAAIAAAAZABgABQAKAAUAAAAZABkABQAJAAIAAAAZABoABQAJAAYAAAAZABsABQAJAAYAAAAaABcABQAJAAYAAAAaABgABQAJAAIAAAAaABkABQAJAAIAAAAaABoABQAJAAYAAAAaABsABQAKAAUAAAAbABcABQAJAAIAAAAbABgABQAJAAIAAAAbABkABQAJAAIAAAAbABoABQAJAAIAAAAbABsABQAJAAIAAAAcABcABQAKAAEAAAAcABgABQAKAAUAAAAcABkABQAKAAEAAAAcABoABQAJAAYAAAAcABsABQAJAAIAAAAdABcABQAKAAEAAAAdABgABQAKAAUAAAAdABkABQAJAAYAAAAdABoABQAJAAYAAAAdABsABQAKAAUAAAAeABcABQAJAAYAAAAeABgABQAJAAIAAAAeABkABQAKAAUAAAAeABoABQAJAAIAAAAeABsABQAKAAUAAAAfABcABQAJAAIAAAAfABgABQAKAAEAAAAfABkABQAJAAIAAAAfABoABQAJAAIAAAAfABsABQAKAAUAAAAgABcABQAJAAYAAAAgABgABQAJAAIAAAAgABkABQAKAAEAAAAgABoABQAKAAEAAAAgABsABQAKAAUAAAAhABcABQAJAAYAAAAhABgABQAKAAEAAAAhABkABQAJAAIAAAAhABoABQAKAAEAAAAhABsABQAKAAEAAAAiABcABQAKAAUAAAAiABgABQAJAAYAAAAiABkABQAKAAEAAAAiABoABQAJAAYAAAAiABsABQAJAAIAAAAjABcABQAJAAYAAAAjABgABQAJAAIAAAAjABkABQAJAAYAAAAjABoABQAKAAEAAAAjABsABQAJAAIAAAAkABcABQAJAAIAAAAkABgABQAJAAYAAAAkABkABQAJAAYAAAAkABoABQAJAAIAAAAkABsABQAJAAYAAAAlABcABQAJAAYAAAAlABgABQAKAAEAAAAlABkABQAJAAYAAAAlABoABQAJAAYAAAAlABsABQAJAAIAAAAmABcABQAJAAIAAAAmABgABQAKAAEAAAAmABkABQAJAAIAAAAmABoABQAJAAIAAAAmABsABQAJAAIAAAAnABcABQAKAAUAAAAnABgABQAKAAUAAAAnABkABQAJAAIAAAAnABoABQAKAAEAAAAnABsABQAKAAUAAAAoABcABQAKAAEAAAAoABgABQAJAAYAAAAoABkABQAKAAEAAAAoABoABQAJAAYAAAAoABsABQAJAAIAAAApABcABQAKAAUAAAApABgABQAKAAEAAAApABkABQAJAAIAAAApABoABQAKAAUAAAApABsABQAKAAUAAAAqABkABQAKAAEAAAAqABoABQAKAAEAAAAqABsABQAKAAEAAAArABkABQAKAAEAAAArABoABQAJAAYAAAArABsABQAKAAEAAAAsAA0ABQAIAAAAAAAsAA4ABQAIAAEAAAAsAA8ABQAIAAEAAAAsABAABQAIAAUAAAAsABEABQAIAAEAAAAsABIABQAIAAUAAAAsABMABQAIAAUAAAAsABQABQAIAAEAAAAsABUABQAFAAUAAAAsABYABQAKAAEAAAAsABcABQAJAAYAAAAsABgABQAJAAIAAAAsABkABQAKAAUAAAAsABoABQAKAAUAAAAsABsABQAKAAEAAAAtAA0ABQAKAAQAAAAtAA4ABQAKAAUAAAAtAA8ABQAKAAEAAAAtABAABQAKAAEAAAAtABEABQAKAAEAAAAtABIABQAJAAIAAAAtABMABQAKAAUAAAAtABQABQAJAAIAAAAtABUABQAKAAUAAAAtABYABQAKAAEAAAAtABcABQAJAAYAAAAtABgABQAKAAUAAAAtABkABQAKAAEAAAAtABoABQAKAAUAAAAtABsABQAKAAEAAAAuAA0ABQAKAAAAAAAuAA4ABQAJAAYAAAAuAA8ABQAJAAIAAAAuABAABQAKAAEAAAAuABEABQAJAAIAAAAuABIABQAJAAYAAAAuABMABQAJAAYAAAAuABQABQAJAAYAAAAuABUABQAKAAUAAAAuABYABQAKAAEAAAAuABcABQAJAAIAAAAuABgABQAJAAYAAAAuABkABQAJAAYAAAAuABoABQAKAAUAAAAuABsABQAKAAUAAAAvAA0ABQAKAAQAAAAvAA4ABQAJAAYAAAAvAA8ABQAKAAUAAAAvABAABQAJAAIAAAAvABEABQAJAAIAAAAvABIABQAKAAUAAAAvABMABQAKAAUAAAAvABQABQAKAAUAAAAvABUABQAJAAIAAAAvABYABQAJAAYAAAAvABcABQAKAAUAAAAvABgABQAJAAYAAAAvABkABQAJAAYAAAAvABoABQAKAAUAAAAvABsABQAJAAYAAAAwAA0ABQAKAAAAAAAwAA4ABQAKAAUAAAAwAA8ABQAKAAUAAAAwABAABQAKAAEAAAAwABEABQAKAAEAAAAwABIABQAJAAYAAAAwABMABQAJAAIAAAAwABQABQAJAAIAAAAwABUABQAKAAEAAAAwABYABQAJAAIAAAAwABcABQAKAAEAAAAwABgABQAJAAYAAAAwABkABQAKAAEAAAAwABoABQAJAAYAAAAwABsABQAKAAEAAAAxAA0ABQAGAAAAAAArABgABQAJAAIAAAArABcABQAJAAYAAAAqABgABQAJAAYAAAAqABcABQAKAAEAAAADAAcABQALAAcAAAADAAYABQALAAYAAAADAAUABQALAAYAAAADAAQABQALAAYAAAADAAMABQALAAYAAAADAAIABQALAAIAAAADAAEABQALAAIAAAADAAAABQALAAYAAAACAAcABQAJAAMAAAACAAYABQAJAAYAAAACAAUABQAJAAYAAAACAAQABQAKAAEAAAACAAMABQAKAAEAAAACAAIABQAJAAYAAAACAAEABQAJAAYAAAACAAAABQAKAAEAAAABAAcABQAJAAMAAAABAAYABQAJAAYAAAABAAUABQAKAAEAAAABAAQABQAKAAEAAAABAAMABQAJAAIAAAABAAIABQAJAAIAAAABAAEABQAKAAEAAAABAAAABQAKAAEAAAAAAAcABQAJAAMAAAAAAAYABQAKAAUAAAAAAAUABQAKAAUAAAAAAAQABQAKAAEAAAAAAAMABQAJAAIAAAAAAAIABQAKAAUAAAAAAAEABQAJAAYAAAAAAAAABQAJAAYAAAD//wcABQAJAAMAAAD//wYABQAKAAEAAAD//wUABQAKAAEAAAD//wQABQAJAAYAAAD//wMABQAJAAYAAAD//wIABQAKAAEAAAD//wEABQAKAAUAAAD//wAABQAJAAYAAAD+/wcABQAFAAMAAAAxAAcABQAGAAMAAAAwAAcABQAJAAMAAAAwAAYABQAKAAUAAAAwAAUABQAKAAUAAAAwAAQABQAKAAEAAAAwAAMABQAKAAEAAAAwAAIABQAKAAUAAAAwAAEABQAJAAIAAAAwAAAABQAJAAIAAAAvAAcABQAJAAcAAAAvAAYABQAJAAIAAAAvAAUABQAKAAEAAAAvAAQABQAJAAYAAAAvAAMABQAJAAYAAAAvAAIABQAKAAEAAAAvAAEABQAKAAUAAAAvAAAABQAKAAUAAAAuAAcABQAJAAcAAAAuAAYABQAJAAIAAAAuAAUABQAKAAEAAAAuAAQABQAKAAEAAAAuAAMABQAJAAYAAAAuAAIABQAJAAYAAAAuAAEABQAJAAYAAAAuAAAABQAJAAIAAAAtAAcABQAJAAcAAAAtAAYABQAJAAYAAAAtAAUABQAJAAIAAAAtAAQABQAKAAEAAAAtAAMABQAJAAIAAAAtAAIABQAJAAYAAAAtAAEABQAJAAYAAAAtAAAABQAKAAUAAAAsAAcABQAIAAcAAAAsAAYABQAIAAUAAAAsAAUABQAIAAUAAAAsAAQABQAIAAEAAAAsAAMABQAIAAUAAAAsAAIABQAIAAEAAAAsAAEABQAIAAEAAAAsAAAABQAIAAUAAAAwAP//BQAKAAEAAAAvAP//BQAJAAIAAAAuAP//BQAKAAUAAAAtAP//BQAJAAIAAAAsAP//BQAIAAUAAAADAP//BQALAAYAAAACAP//BQAJAAYAAAABAP//BQAJAAIAAAAAAP//BQAJAAIAAAD/////BQAJAAYAAAArABYABQAKAAEAAAArABUABQAKAAAAAAAqABYABQAKAAUAAAAqABUABQAKAAQAAAApABYABQAJAAYAAAApABUABQAKAAQAAAAoABYABQAKAAUAAAAoABUABQAKAAAAAAAnABYABQAJAAIAAAAnABUABQAKAAAAAAAmABYABQAKAAEAAAAmABUABQAKAAQAAAAlABYABQAKAAEAAAAlABUABQAKAAAAAAAkABYABQAJAAYAAAAkABUABQAKAAAAAAAjABYABQAJAAIAAAAjABUABQAKAAQAAAAiABYABQAKAAEAAAAiABUABQAKAAQAAAAhABYABQAKAAUAAAAhABUABQAKAAAAAAAgABYABQAKAAUAAAAgABUABQAKAAAAAAAfABYABQAJAAIAAAAfABUABQAKAAQAAAAeABYABQAJAAIAAAAeABUABQAKAAAAAAAdABYABQAJAAIAAAAdABUABQAKAAAAAAAcABYABQAKAAEAAAAcABUABQAKAAAAAAAbABYABQAKAAUAAAAbABUABQAKAAAAAAAaABYABQAKAAEAAAAaABUABQAKAAAAAAAZABYABQAKAAEAAAAZABUABQAKAAAAAAAYABYABQAKAAUAAAAYABUABQAKAAAAAAAXABYABQAKAAUAAAAXABUABQAKAAQAAAAWABYABQAKAAEAAAAWABUABQAKAAQAAAAVABYABQAJAAYAAAAVABUABQAKAAQAAAAUABYABQAJAAYAAAAUABUABQAKAAAAAAATABYABQAKAAUAAAATABUABQAKAAQAAAASABYABQAJAAYAAAASABUABQAKAAQAAAARABYABQAJAAIAAAARABUABQAKAAAAAAAQABYABQAKAAEAAAAQABUABQAKAAAAAAAPABYABQAJAAIAAAAPABUABQAKAAQAAAAOABYABQAJAAYAAAAOABUABQAKAAAAAAANABYABQAKAAEAAAANABUABQAKAAQAAAAMABYABQAJAAIAAAAMABUABQAKAAAAAAALABYABQAKAAEAAAALABUABQAKAAQAAAAKABYABQAJAAYAAAAKABUABQAKAAQAAAAJABYABQAJAAIAAAAJABUABQAKAAQAAAAIABYABQAKAAEAAAAIABUABQAKAAAAAAAHABYABQAJAAYAAAAHABUABQAKAAQAAAAGABYABQAJAAYAAAAGABUABQAKAAQAAAAFABYABQAJAAYAAAAFABUABQAKAAQAAAAEABYABQAJAAYAAAAEABUABQAKAAQAAAADAPD/BQAAAAYAAAADAPH/BQAAAAIAAAADAPL/BQAAAAYAAAADAPP/BQAAAAIAAAADAPT/BQAAAAIAAAADAPX/BQAAAAYAAAADAPb/BQAAAAYAAAADAPf/BQAAAAIAAAADAPj/BQAAAAIAAAADAPn/BQAAAAYAAAADAPr/BQAAAAYAAAADAPv/BQAAAAIAAAADAPz/BQAAAAYAAAADAP3/BQAAAAIAAAADAP7/BQAHAAUAAAAsAP7/BQAEAAUAAAAsAP3/BQAAAAYAAAAsAPz/BQAAAAIAAAAsAPv/BQAAAAYAAAAsAPr/BQAAAAYAAAAsAPn/BQAAAAIAAAAsAPj/BQAAAAYAAAAsAPf/BQAAAAIAAAAsAPb/BQAAAAIAAAAsAPX/BQAAAAIAAAAsAPT/BQAAAAIAAAAsAPP/BQAAAAYAAAAsAPL/BQAAAAYAAAAsAPH/BQAAAAYAAAAsAPD/BQAAAAIAAAACAP7/BQAKAAAAAAABAP7/BQAKAAQAAAAAAP7/BQAKAAAAAAD///7/BQAKAAQAAAD+/wYABQAIAAEAAAD+/wUABQAIAAEAAAD+/wQABQAIAAUAAAD+/wMABQAIAAEAAAD+/wIABQAIAAEAAAD+/wEABQAIAAUAAAD+/wAABQAIAAEAAAD+////BQAIAAUAAAD+//7/BQAIAAQAAAD+/w4ABQAIAAEAAAABABwABQAJAAMAAAAAABwABQAJAAMAAAD//xwABQAJAAcAAAD+/xwABQAIAAMAAAD+/xsABQAIAAEAAAD+/xoABQAIAAUAAAD+/xkABQAIAAEAAAD+/xgABQAIAAEAAAD+/xcABQAIAAEAAAD+/xYABQAIAAEAAAD+/xUABQAIAAUAAAD+/xQABQAIAAEAAAD+/xMABQAIAAUAAAD+/xIABQAIAAUAAAD+/xEABQAIAAEAAAD+/xAABQAIAAEAAAD+/w8ABQAIAAEAAAAxABwABQALAAMAAAAxABsABQALAAIAAAAxABoABQALAAYAAAAwABwABQAJAAcAAAAvABwABQAJAAcAAAAuABwABQAJAAcAAAAtABwABQAJAAMAAAAsABwABQAJAAcAAAArABwABQAJAAMAAAAqABwABQAJAAMAAAApABwABQAJAAcAAAAoABwABQAJAAcAAAAnABwABQAJAAcAAAAmABwABQAJAAcAAAAlABwABQAJAAcAAAAkABwABQAJAAMAAAAjABwABQAJAAMAAAAiABwABQAJAAMAAAAhABwABQAJAAMAAAAgABwABQAJAAMAAAAfABwABQAJAAMAAAAeABwABQAJAAcAAAAdABwABQAJAAcAAAAcABwABQAJAAMAAAAbABwABQAJAAMAAAAaABwABQAJAAcAAAAZABwABQAJAAcAAAAYABwABQAJAAMAAAAXABwABQAJAAcAAAAWABwABQAJAAMAAAAVABwABQAJAAcAAAAUABwABQAJAAcAAAATABwABQAJAAcAAAASABwABQAJAAcAAAARABwABQAJAAcAAAAQABwABQAJAAMAAAAPABwABQAJAAMAAAAOABwABQAJAAcAAAANABwABQAJAAcAAAAMABwABQAJAAMAAAALABwABQAJAAMAAAAKABwABQAJAAMAAAAJABwABQAJAAcAAAAIABwABQAJAAMAAAAHABwABQAJAAMAAAAGABwABQAJAAcAAAAFABwABQAJAAcAAAAEABwABQAJAAMAAAADABwABQAJAAMAAAACABwABQAJAAcAAAAxABkABQALAAYAAAAxABgABQALAAIAAAAxABcABQALAAYAAAAxABYABQALAAYAAAAxABUABQALAAIAAAAxABQABQALAAIAAAAxABMABQALAAYAAAAxABIABQALAAYAAAAxABEABQALAAYAAAAxABAABQALAAYAAAAxAA8ABQALAAYAAAAxAA4ABQALAAIAAAAxAAYABQALAAYAAAAxAAUABQALAAIAAAAxAAQABQALAAYAAAAxAAMABQALAAYAAAAxAAIABQALAAIAAAAxAAEABQALAAYAAAAxAAAABQALAAYAAAAxAP//BQALAAIAAAAxAP7/BQALAAAAAAAwAP7/BQAKAAQAAAAvAP7/BQAKAAAAAAAuAP7/BQAKAAQAAAAtAP7/BQAKAAAAAAD8/wcABQABAAAAAAD9/wcABQACAAcAAAD8/w0ABQABAAIAAAD8/wwABQAAAAIAAAD8/wsABQAAAAYAAAD8/woABQAAAAYAAAD8/wkABQAAAAIAAAD8/wgABQAAAAIAAAD9/w0ABQACAAcAAAAzAAcABQADAAQAAAAyAAcABQACAAMAAAAzAA0ABQADAAYAAAAzAAwABQAAAAYAAAAzAAsABQAAAAIAAAAzAAoABQAAAAIAAAAzAAkABQAAAAYAAAAzAAgABQAAAAIAAAAyAA0ABQACAAcAAAAsAOb/BQADAAQAAAAsAOf/BQAAAAIAAAAsAOj/BQAAAAYAAAAsAOn/BQAAAAIAAAAsAOr/BQAAAAIAAAAsAOv/BQAAAAIAAAAsAOz/BQAAAAYAAAAsAO3/BQAAAAYAAAAsAO7/BQAAAAYAAAAsAO//BQAAAAYAAAADAOb/BQABAAAAAAAEAOb/BQACAAMAAAAFAOb/BQACAAcAAAAGAOb/BQACAAMAAAAHAOb/BQACAAcAAAAIAOb/BQACAAcAAAAJAOb/BQACAAcAAAAKAOb/BQACAAcAAAALAOb/BQACAAMAAAAMAOb/BQACAAcAAAANAOb/BQACAAcAAAAOAOb/BQACAAcAAAAPAOb/BQACAAcAAAAQAOb/BQACAAcAAAARAOb/BQACAAMAAAASAOb/BQACAAMAAAATAOb/BQACAAMAAAAUAOb/BQACAAMAAAAVAOb/BQACAAcAAAAWAOb/BQACAAMAAAAXAOb/BQACAAcAAAAYAOb/BQACAAMAAAAZAOb/BQACAAMAAAAaAOb/BQACAAcAAAAbAOb/BQACAAMAAAAcAOb/BQACAAcAAAAdAOb/BQACAAMAAAAeAOb/BQACAAMAAAAfAOb/BQACAAMAAAAgAOb/BQACAAMAAAAhAOb/BQACAAMAAAAiAOb/BQACAAMAAAAjAOb/BQACAAcAAAAkAOb/BQACAAcAAAAlAOb/BQACAAcAAAAmAOb/BQACAAMAAAAnAOb/BQACAAcAAAAoAOb/BQACAAcAAAApAOb/BQACAAcAAAAqAOb/BQACAAMAAAArAOb/BQACAAMAAAADAO//BQAAAAYAAAADAO7/BQAAAAIAAAADAO3/BQAAAAYAAAADAOz/BQAAAAYAAAADAOv/BQAAAAYAAAADAOr/BQAAAAYAAAADAOn/BQAAAAYAAAADAOj/BQAAAAYAAAADAOf/BQAAAAIAAAA=")

[node name="SpoonBullet" parent="Units" index="0" instance=ExtResource("4_6gfy6")]
position = Vector2(0, -64)

[node name="PeanutButterNpc" parent="Units" index="1" instance=ExtResource("5_de8a0")]
position = Vector2(192, 168)

[node name="PeanutButter" parent="Units/Enemies" index="0" instance=ExtResource("3_o1p4x")]
position = Vector2(8, -16)

[node name="Markers" type="Node2D" parent="Units" index="5"]

[node name="LeftPoint" type="Marker2D" parent="Units/Markers" index="0"]
position = Vector2(48, 168)

[node name="MidPoint" type="Marker2D" parent="Units/Markers" index="1"]
position = Vector2(192, 168)

[node name="RightPoint" type="Marker2D" parent="Units/Markers" index="2"]
position = Vector2(336, 168)

[node name="NpcPoint" type="Marker2D" parent="Units/Markers" index="3"]
position = Vector2(288, 168)

[node name="Player" parent="." index="3"]
position = Vector2(80, 168)

[node name="GameCamera" parent="." index="4"]
position = Vector2(80, 168)

[node name="WarnLight" type="PointLight2D" parent="Lights" index="1"]
position = Vector2(36, 164)
color = Color(1, 0, 0, 1)
energy = 2.0
range_layer_min = -10
range_layer_max = 10
texture = SubResource("GradientTexture2D_de8a0")

[node name="WarnTimer" type="Timer" parent="Lights/WarnLight" index="0"]
one_shot = true

[node name="LTeleporter" parent="Entrances" index="0" instance=ExtResource("2_b2c6w")]
position = Vector2(-16, 0)
target_scene = 52
target_entry_point = 4

[node name="EntryPoint" parent="Entrances/LTeleporter" index="1" instance=ExtResource("3_q6rlv")]
position = Vector2(16, 104)

[node name="RTeleporter" parent="Entrances" index="1" instance=ExtResource("2_b2c6w")]
position = Vector2(400, 0)
target_scene = 54

[node name="EntryPoint" parent="Entrances/RTeleporter" index="1" instance=ExtResource("3_q6rlv")]
position = Vector2(-16, 104)
location = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]
libraries = {
&"": SubResource("AnimationLibrary_wtuyw")
}

[connection signal="updated" from="Units/PeanutButterNpc" to="." method="_on_peanut_butter_npc_updated"]
[connection signal="defeated" from="Units/Enemies/PeanutButter" to="." method="_on_peanut_butter_defeated"]
[connection signal="timeout" from="Lights/WarnLight/WarnTimer" to="." method="_on_warn_timer_timeout"]
